hphp/hack/doc/hack-langspec/tests/Serialization/Point.php.expectf

Fatal error: Declaration of Graphics\Point::unserialize() must be compatible with that of Serializable::unserialize() in %s/tests/Serialization/Point.php on line 5